--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,1 @@
-[package]
-name = "fmodifier"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[[bin]]
-name = "fmodifier"
-path = "src/terminal/main.rs"
-
-[dependencies]
+workspace = { members = ["core", "fmodifier"] }
