--- a/fmodifier/Cargo.toml
+++ b/fmodifier/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 
 [dependencies]
 terminal = { path = "../terminal" }
-clap = "4.5.6"
+clap = { version = "4.5.6", features = ["cargo"] }
