--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,1 +1,13 @@
-workspace = { members = ["core", "fmodifier", "terminal"] }
+[package]
+name = "fmodifier"
+version = "0.1.0"
+edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[[bin]]
+name = "fmodifier"
+path = "src/bin/fmodifier/main.rs"
+
+[dependencies]
+clap = { version = "4.5.6", features = ["cargo"] }
